js/js.translator/testData/incremental/invalidation/renamePackageWithConsumer/lib1/l1.1.kt
package sample.b

fun foo(): Int = 1
